# MemSE

./: .coverage  .gitignore  README.md  TODO  requirements.txt  setup.cfg  setup.py
MemSE/: MemSE.py  MemristorQuant.py  ProtoDataset.py  __init__.py  conv_decompositions.py  dataset.py  definitions.py  keops_mse_functions.py  metrics.py  model_load.py  model_loader.py  model_summary.py  mse_functions.py  network_manipulations.py  nn.py  optimizer.py  test_utils.py  train_test_loop.py  utils.py
MemSE/fx/: Conv2d.py  Linear.py  __init__.py  fusion.py  network_manipulations.py  torch_fx.py  trace.py  utils.py
MemSE/misc/: Meters.py  Timer.py  UniqueKeyDict.py  __init__.py  accuracy.py  cuda_properties.py  has_lib.py  model_properties.py
MemSE/models/: JohNet.py  VGG.py  __init__.py
MemSE/nas/: AccuracyPredictor.py  BatchPicker.py  CrossbarConstraint.py  DataloadersHolder.py  GA.py  MemSEDataset.py  MemSEProblem.py  ResNetArchEncoder.py  __init__.py
MemSE/nn/: Add.py  AvgPool2d.py  Conv2DUF.py  Linear.py  MemSE.py  MemSEAct.py  MemSELayer.py  Padder.py  Pooling.py  ReLU.py  Reshaper.py  Softplus.py  Tensor.py  __init__.py  definitions.py  map.py  utils.py
MemSE/quant/: Crossbar.py  __init__.py
MemSE/training/: Dataloaders.py  Optimizers.py  RunConfig.py  RunManager.py  __init__.py
benchmarks/: bench.py
experiments/: grad_optim.py  higher_order_softplus.ipynb  mse_analysis.ipynb  other_models.ipynb  pruning.ipynb  sparse_analysis.ipynb  test_opti_seb.py  time_comparison.ipynb  viz.ipynb
experiments/aicas/: paper_results.ipynb
experiments/conference_2/: comparison_accuracy.csv  convergence_analysis.py  eval_ofa_net.py  eval_ofa_net_vs_memse.py  ga.py  ga_eval.py  ga_memseproblem.py  ga_parse.ipynb  memsedataset.py  ofa_acc_predictor_test.py  ofa_energy_vs_memse_power.py  ofa_tests.ipynb  plot_comparison_power.py  power_convergence.npy  predictor_train_memsedataset.py  protoinputs.ipynb  prototyping.py  prototyping_2.py  run_experiment.sh  utils.py
experiments/paper/: launcher.py  noncc_requirements.txt  opt.py  opt_profile.py  (+4 more)
tests/: test_conv2duf.py  test_linear.py  test_linear_layer.py  test_memristorquant.py  test_memse.py  test_misc.py  test_network_manipulations.py  test_nn.py  test_nn_old.py  test_tests.py  test_torchquad.py  test_utils.py
(+66 files in other folders)
