[tool:pytest]
norecursedirs =
    .git
    dist
    build
    tutorial
    benchmark
python_files =
    test_*.py
addopts =
    --strict-markers
    --doctest-modules
    --color=yes
markers =
    slow
    remote_data
    filterwarnings
    gpus_param_tests
junit_duration_report = call

[coverage:report]
exclude_lines =
    pragma: no-cover
    warnings
    pass
    rank_zero_warn
    raise NotImplementedError

[flake8]
# TODO: this should be 88 or 100 according PEP8
max-line-length = 120
exclude =
    .tox,
    *.egg
    build
    temp

select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore =
    E731  # do not assign a lambda expression, use a def
    W503  # line break before binary operator
    # because of YAPF - till https://github.com/google/yapf/issues/897 is resolved
    E231  # missing whitespace after ',', ';', or ':'; for black
    W191

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*
    .circleci


[metadata]
license_file = LICENSE
# long_description = file:README.md
# long_description_content_type = text/markdown

[pydocstyle]
convention = pep257
# D104, D107: Ignore missing docstrings in __init__ files and methods.
# D202: Ignore a blank line after docstring (collision with Python Black in decorators)
add-ignore = D104,D107,D202
max-line-length = 120

[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
split_before_arithmetic_operator = true
COLUMN_LIMIT = 120
COALESCE_BRACKETS = true
DEDENT_CLOSING_BRACKETS = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false

[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
files = MemSE, tests
disallow_untyped_defs = True
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[pylama]
format = black
ignore = E501

[pycodestyle]
format = black
ignore = E501